# dummy_django_app_on_render

./: .coveragerc  .flake8  .gitignore  README.md  docker-compose-deployment.sh  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml  render.yaml
.circleci/: config.yml
dummy_django_blog/: Dockerfile  conftest.py  manage.py  pytest.ini  requirements.txt
dummy_django_blog/authentication/: admin.py  forms.py  models.py  validators.py  views.py
dummy_django_blog/authentication/migrations/: 0001_initial.py  0002_alter_user_image_profile.py  0003_alter_user_image_profile.py  0004_alter_user_image_profile.py  0005_alter_user_image_profile.py  0006_alter_user_image_profile.py  0007_alter_user_follows.py  0008_alter_user_follows.py
dummy_django_blog/authentication/tests/: test_views.py
dummy_django_blog/blog/: admin.py  forms.py  models.py  validators.py  views.py
dummy_django_blog/blog/migrations/: 0001_initial.py  0002_alter_post_title.py  0003_photo_uploader.py  0004_photo_created_at.py  0005_alter_post_word_count.py  0006_alter_photo_options.py  0007_alter_post_title.py  0008_remove_post_author_contributor_post_contributors.py  0009_auto_20240719_2032.py  0010_alter_post_contributors.py  0011_alter_photo_caption_alter_photo_image_and_more.py  0012_rename_title_photo_title_photo.py  0013_photo_starred.py
dummy_django_blog/dummy_django_blog/: asgi.py  context_processors.py  settings.py  storage.py  urls.py  views.py  wsgi.py
dummy_django_blog/templates/: base.html  error.html
nginx/: nginx.conf
press_people/press_people/: urls.py
(+34 files in other folders)
